--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		    <style> 
 		      body{zoom: 0.8;} 
 		    </style> 
-		<h1 class='auto-style'; align="center">CMGAN: Conformer-based Metric GAN for Speech Enhancement</h1>
+		<h1 class='auto-style'; align="center">CMGAN: Conformer-based Metric GAN for Speech Enhancement and Audio Super-Resolution</h1>
 		<h2 class='auto-style'; align="center">
 			Audio Samples
 		</h2>
